# plume

./: .gitignore  CMakeLists.txt  plume_apple.mm  plume_d3d11.cpp  plume_d3d11.h  plume_d3d12.cpp  plume_d3d12.h  plume_metal.cpp  plume_metal.h  plume_render_interface.h  plume_render_interface_types.h  plume_vulkan.cpp  plume_vulkan.h
.github/workflows/: validate.yml
cmake/: PlumeInternalShaders.cmake  PlumeShaders.cmake
cmake/modules/: PlumeFileToC.cmake
cmake/tools/: file_to_c.cpp  spirv_cross_msl.cpp
examples/: CMakeLists.txt
examples/cmake/: PlumeShaders.cmake  ShaderCompilation.cmake
examples/cmake/modules/: PlumeDXC.cmake  PlumeSDL2.cmake  PlumeSpirvCross.cmake
examples/cmake/tools/: file_to_c.cpp
examples/cube/: CMakeLists.txt  main.cpp
examples/cube/shaders/: cube.frag.hlsl  cube.frag.metal  cube.vert.hlsl  cube.vert.metal
examples/triangle/: CMakeLists.txt  main.cpp
shaders/: plume_clear.metal  plume_resolve.metal
